force-app/main/default/objects/Discount_Request_Audit__c/Discount_Request_Audit__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail for all actions taken on Discount Requests. Written by the trigger — never updated or deleted after creation.</description>
    <label>Discount Request Audit</label>
    <nameField>
        <displayFormat>DRA-{0000}</displayFormat>
        <label>Audit Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Request Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>