force-app/main/default/objects/Discount_Request_Audit__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The action that was performed, e.g. Submitted, Approved, Rejected, Auto-Approved.</description>
    <label>Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>