force-app/main/default/objects/Discount_Request_Audit__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Free-text comments captured at the time of the action, e.g. rejection reason.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>