force-app/main/default/objects/Discount_Request_Audit__c/fields/Discount_Request__c.field-meta.xml
<CustomField>
    <fullName>Discount_Request__c</fullName>
    <description>The Discount Request this audit record belongs to.</description>
    <label>Discount Request</label>
    <referenceTo>Discount_Request__c</referenceTo>
    <relationshipLabel>Audit Trail</relationshipLabel>
    <relationshipName>Audit_Trail</relationshipName>
    <type>Lookup</type>
</CustomField>