force-app/main/default/objects/Discount_Request_Audit__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <description>The User who performed the action. Populated from UserInfo.getUserId() in the trigger context.</description>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Discount Request Audit Records</relationshipLabel>
    <relationshipName>Discount_Request_Audit_Records</relationshipName>
    <type>Lookup</type>
</CustomField>