force-app/main/default/objects/Discount_Request_Audit__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Exact date and time the action was performed. Set to DateTime.now() by the trigger.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>